リファクタリング漏れ

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>C2DMtestapp</name>
+	<name>SSS-SN-ANDROID-EXAMPLE1</name>
 	<comment></comment>
 	<projects>
 	</projects>
