--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,8 +6,8 @@
 
     <uses-sdk android:minSdkVersion="10" />
 
-   	<permission android:name="jp.co.conit.testc2dm.permission.C2D_MESSAGE" android:protectionLevel="signature" />
-   	<uses-permission android:name="jp.co.conit.testc2dm.permission.C2D_MESSAGE" />
+   	<permission android:name="jp.co.conit.SSS_SN_ANDROID_EXAMPLE1.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+   	<uses-permission android:name="jp.co.conit.SSS_SN_ANDROID_EXAMPLE1.permission.C2D_MESSAGE" />
    	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
    	<uses-permission android:name="android.permission.INTERNET" />    
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -31,12 +31,12 @@
           <!-- Receive the actual message -->
           <intent-filter>
               <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-              <category android:name="jp.co.conit.testc2dm" />
+              <category android:name="jp.co.conit.SSS_SN_ANDROID_EXAMPLE1" />
           </intent-filter>
           <!-- Receive the registration id -->
           <intent-filter>
               <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-              <category android:name="jp.co.conit.testc2dm" />
+              <category android:name="jp.co.conit.SSS_SN_ANDROID_EXAMPLE1" />
           </intent-filter>
       </receiver> 
          
