--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,47 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+      Copyright (C) 2012 CONIT Co., Ltd.
+ 
+      Licensed under the Apache License, Version 2.0 (the "License");
+      you may not use this file except in compliance with the License.
+      You may obtain a copy of the License at
+
+           http://www.apache.org/licenses/LICENSE-2.0
+
+      Unless required by applicable law or agreed to in writing, software
+      distributed under the License is distributed on an "AS IS" BASIS,
+      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+      See the License for the specific language governing permissions and
+      limitations under the License.
+-->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="jp.co.conit.SSS_SN_ANDROID_EXAMPLE1"
+    package="jp.co.conit.sss.sn.ex1"
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="10" />
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="16" />
 
-   	<permission android:name="jp.co.conit.SSS_SN_ANDROID_EXAMPLE1.permission.C2D_MESSAGE" android:protectionLevel="signature" />
-   	<uses-permission android:name="jp.co.conit.SSS_SN_ANDROID_EXAMPLE1.permission.C2D_MESSAGE" />
-   	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-   	<uses-permission android:name="android.permission.INTERNET" />    
-    <uses-permission android:name="android.permission.VIBRATE" />
+    <permission
+        android:name="jp.co.conit.sss.sn.ex1.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="jp.co.conit.sss.sn.ex1.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
-
+        android:label="@string/app_name"
+        android:theme="@android:style/Theme.Black.NoTitleBar" >
         <activity
+            android:name=".activity.SettingsActivity"
+            android:configChanges="orientation|screenSize|keyboard|keyboardHidden"
             android:label="@string/app_name"
-            android:name="jp.co.conit.testc2dm.C2DMtestappActivity" >
-            <intent-filter >
+            android:launchMode="singleTask" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-      <!-- Only C2DM servers can send messages for the app. If permission is not set - any other app can generate it --> 
-      <receiver android:name="jp.co.conit.testc2dm.C2DMReceiver" android:permission="com.google.android.c2dm.permission.SEND">
-          <!-- Receive the actual message -->
-          <intent-filter>
-              <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-              <category android:name="jp.co.conit.SSS_SN_ANDROID_EXAMPLE1" />
-          </intent-filter>
-          <!-- Receive the registration id -->
-          <intent-filter>
-              <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-              <category android:name="jp.co.conit.SSS_SN_ANDROID_EXAMPLE1" />
-          </intent-filter>
-      </receiver> 
-         
-            
-            
+
+        <service android:name=".service.SendMessageIdIntentService" />
+        <service android:name=".service.RegistService" />
+        <service android:name=".service.UnRegistService" />
+        <service android:name=".service.GCMIntentService" />
+
+        <receiver
+            android:name=".service.SNGCMBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <category android:name="jp.co.conit.sss.sn.ex1" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
